hphp/hack/test/typecheck/coeffects/read_globals/read_static_prop_error.php.legacy_decl.exp
File "read_static_prop_error.php", line 8, characters 10-17:
Reading static properties requires the capability ReadGlobals, which is not provided by the context. Add the context `[read_globals]` after the function parameter list (or amend an existing context with a new comma delineated entry `read_globals`). (Parsing[1002])
File "read_static_prop_error.php", line 14, characters 8-14:
Reading static properties requires the capability ReadGlobals, which is not provided by the context. Add the context `[read_globals]` after the function parameter list (or amend an existing context with a new comma delineated entry `read_globals`). (Parsing[1002])
File "read_static_prop_error.php", line 18, characters 8-14:
Creating mutable references to static properties requires the capability Globals, which is not provided by the context. Enclose the static in a readonly expression. (Parsing[1002])
File "read_static_prop_error.php", line 23, characters 8-15:
Reading static properties requires the capability ReadGlobals, which is not provided by the context. Add the context `[read_globals]` after the function parameter list (or amend an existing context with a new comma delineated entry `read_globals`). (Parsing[1002])
File "read_static_prop_error.php", line 28, characters 8-15:
Creating mutable references to static properties requires the capability Globals, which is not provided by the context. Enclose the static in a readonly expression. (Parsing[1002])
File "read_static_prop_error.php", line 8, characters 16-17:
Reading static properties requires the capability ReadGlobals, which is not provided by the context. (Typing[4401])
  File "read_static_prop_error.php", line 7, characters 32-33:
  The local (enclosing) context provides the capability set {}
File "read_static_prop_error.php", line 14, characters 13-14:
Reading static properties requires the capability ReadGlobals, which is not provided by the context. (Typing[4401])
  File "read_static_prop_error.php", line 13, characters 42-43:
  The local (enclosing) context provides the capability set {}
File "read_static_prop_error.php", line 18, characters 13-14:
Creating mutable references to static properties requires the capability AccessGlobals, which is not provided by the context. (Typing[4401])
  File "read_static_prop_error.php", line 17, characters 61-72:
  The local (enclosing) context provides the capability ReadGlobals
  File "read_static_prop_error.php", line 18, characters 13-14:
  Please enclose the static in a readonly expression
File "read_static_prop_error.php", line 23, characters 14-15:
Reading static properties requires the capability ReadGlobals, which is not provided by the context. (Typing[4401])
  File "read_static_prop_error.php", line 21, characters 36-37:
  The local (enclosing) context provides the capability set {}
File "read_static_prop_error.php", line 28, characters 14-15:
Creating mutable references to static properties requires the capability AccessGlobals, which is not provided by the context. (Typing[4401])
  File "read_static_prop_error.php", line 26, characters 55-66:
  The local (enclosing) context provides the capability ReadGlobals
  File "read_static_prop_error.php", line 28, characters 14-15:
  Please enclose the static in a readonly expression
